--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel='stylesheet' type='text/css' href='css/style.css'>
-  <link rel='stylesheet' type='text/css' href='css/reset.css'>
+<html>
+  <head>
+	<title>Find Local Farmers Markets</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key="></script>
-  <script language="javascript" type="text/javascript" src="js/map.js"></script>
-  <script language="javascript" type="text/javascript" src="js/search.js"></script>
 
-  <title>Farmer</title>
-</head>
-<body>
+	<!--[if lt IE 9]>
+		<script src="/js/html5shiv.min.js"></script>
+	<![endif]-->
 
-  <div id="control">
-    <h2>Find Local Farmers Markets</h2>
-    <p>We'll help you locate your closets farmers markets. Simply choose an option below to begin...</p>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfCHqixEYScHO-7Yy6P1svXntfnF7O3RU"></script>
+    <script language="javascript" type="text/javascript" src="js/map.js"></script>
+	<script language="javascript" type="text/javascript" src="js/search.js"></script>
+  </head>
+  <body>
 
-    <form method='get' id="choose"></form>
-      <button type='submit' class="learnButton">Use Current Location</button>
-      <button type='button' id='searchZip' class="learnButton">Search by Zip Code</button>
-      <div class='clear'></div>
-      <div class="zipSearch">
-        <input type="text" name="zip" placeholder="enter your zip code" id="textZip" autofocus>
-        <button type='submit' class="learnButton">Search</button>
-      </div>
-      <div class="clear"></div>
-    </form>
-  </div>
+	<div id="control">
+		<h2>Find Local Farmers Markets</h2>
+		<p>We'll help you locate your closest farmers markets. Simply choose an option below to begin...</p>
+		<form method="get" id="chooseZip">
+			<button type="submit" class="learnButton">Use current location</button>
+			<button type="button" id="searchZip" class="learnButton">Search by Zip Code</button>
+			<div class="clear"></div>
+			<div class="zipSearch">
+				<input id="textZip" type="text" name="zip" placeholder="enter your zip code" autofocus>
+				<button type="submit" class="learnButton">Search</button>
+			</div>
+			<div class="clear"></div>
+		</form>
 
-  <div id="map-canvas"></div>
-</body>
+		</div>
+		<div class="clear"></div>
+		<div id="results"></div>
+	</div>
+
+	<!-- an empty div for the map -->
+	<div id="map-canvas"></div>
+
+
+  </body>
 </html>
