--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<script src="/js/html5shiv.min.js"></script>
 	<![endif]-->
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfCHqixEYScHO-7Yy6P1svXntfnF7O3RU"></script>
-    <script language="javascript" type="text/javascript" src="js/map.js"></script>
+  <script language="javascript" type="text/javascript" src="js/map.js"></script>
 	<script language="javascript" type="text/javascript" src="js/search.js"></script>
   </head>
   <body>
