--- a/index.html
+++ b/index.html
@@ -12,29 +12,25 @@
 		<script src="/js/html5shiv.min.js"></script>
 	<![endif]-->
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfCHqixEYScHO-7Yy6P1svXntfnF7O3RU"></script>
-  <script language="javascript" type="text/javascript" src="js/map.js"></script>
-	<script language="javascript" type="text/javascript" src="js/search.js"></script>
-  </head>
+
   <body>
 
 	<div id="control">
 		<h2>Find Local Farmers Markets</h2>
 		<p>We'll help you locate your closest farmers markets. Simply choose an option below to begin...</p>
-		<form method="get" id="chooseZip">
+
+    <form method="get" id="chooseZip">
 			<button type="submit" class="learnButton">Use current location</button>
 			<button type="button" id="searchZip" class="learnButton">Search by Zip Code</button>
 			<div class="clear"></div>
 			<div class="zipSearch">
-				<input id="textZip" type="text" name="zip" placeholder="enter your zip code" autofocus>
+				<input id="textZip" type="number" name="zip" placeholder="enter your zip code" autofocus>
 				<button type="submit" class="learnButton">Search</button>
 			</div>
 			<div class="clear"></div>
 		</form>
 
-		</div>
+
 		<div class="clear"></div>
 		<div id="results"></div>
 	</div>
@@ -42,6 +38,11 @@
 	<!-- an empty div for the map -->
 	<div id="map-canvas"></div>
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfCHqixEYScHO-7Yy6P1svXntfnF7O3RU"></script>
+  <script language="javascript" type="text/javascript" src="js/map.js"></script>
+	<script language="javascript" type="text/javascript" src="js/search.js"></script>
+  </head>
   </body>
 </html>
